<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">android-training</string>
    <string name="action_settings">Settings</string>
    
    <!-- GreenDao -->
    <string name="greendao">GreenDao</string>
    <string name="button_greendao_demo">GreenDao demo</string>
    <string name="button_add_data">Add data</string>
    <string name="button_clear_data">Clear data</string>
    <string name="button_transaction">Transaction</string>
    <string name="button_no_transaction">No transaction</string>
    <string name="button_caching">Caching demo</string>
    <string name="button_caching_problem">Caching problem</string>
    
    <!-- ASyncTask -->
    <string name="asynctask">ASyncTask</string>
    <string name="button_async_demo">ASyncTask demo</string>
    <string name="button_unsafe_async_task">Unsafe Task</string>
    <string name="button_safe_async_task">Safe task</string>
    <string name="button_progress_async_task">Progress ASync Task</string>
    <string name="button_serial_async_task">Serial ASync Tasks</string>
    <string name="button_parallel_async_task">Parallel ASync Tasks</string>

    <!-- Alarms -->
    <string name="alarms">Alarms</string>
    <string name="button_alarm_demo">Alarm demo</string>
    <string name="button_single_alarm">One shot</string>
    <string name="button_repeating_alarm">Repeating</string>
    
    <!-- Palette -->
    <string name="palette">Palette</string>
    <string name="button_palette_demo">Palette demo</string>
    <string name="button_palette_get_swatches">Get swatches</string>
    <string name="vibrant">Vibrant</string>
    <string name="muted">Muted</string>
    
    <!-- Intents -->
    <string name="intents">Intents</string>
    <string name="button_intent_demo">Intent demo</string>
    <string name="button_intent_bundle">As Bundle</string>
    <string name="button_intent_direct">Directly</string>
    
    <!-- Stack Overflow -->
    <string name="stack_overflow">StackOverflow</string>
    <string name="button_stackoverflow">SO Playground</string>
    
</resources>
