<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/button_async_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_async_demo" />

    <Button
        android:id="@+id/button_greendao_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_greendao_demo" />

    <Button
        android:id="@+id/button_alarm_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_alarm_demo" />

    <Button
        android:id="@+id/button_palette_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_palette_demo" />
	
	<Button
        android:id="@+id/button_intent_demo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_intent_demo" />
	    
	<Button
        android:id="@+id/button_stackoverflow_playground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_stackoverflow" />

</LinearLayout>