<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="@dimen/activity_vertical_margin"
    >
    
	<ProgressBar 
	    android:id="@+id/async_progress"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:progress="1"
	    android:max="5"
	    style="?android:attr/progressBarStyleHorizontal"
	    />
	
	<Button 
	    android:id="@+id/button_unsafe_async_task"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_unsafe_async_task"
	    />
	
	<Button 
	    android:id="@+id/button_safe_async_task"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_safe_async_task"
	    />
    
	<Button 
	    android:id="@+id/button_progress_async_task"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_progress_async_task"
	    />
	
	<Button 
	    android:id="@+id/button_async_task_serial"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_serial_async_task"
	    />
    
	<Button 
	    android:id="@+id/button_async_task_parallel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/button_parallel_async_task"
	    />
	
</LinearLayout>
