<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="@dimen/activity_vertical_margin"
    >
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        
		<Button 
		    android:id="@+id/button_add_data"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_add_data"
		    />
		
		<Button 
		    android:id="@+id/button_clear_data"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_clear_data"
		    />
	        
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
		
		<Button
		    android:id="@+id/button_run_in_tx"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_transaction"
		    />
		
		<Button
		    android:id="@+id/button_run_without_tx"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_no_transaction"
		    />
		
	</LinearLayout>
	
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
		
		<Button
		    android:id="@+id/button_caching"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_caching"
		    />
		
		<Button
		    android:id="@+id/button_caching_problem"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/button_caching_problem"
		    />
		
	</LinearLayout>
	
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    >
	    
		<TextView
		    android:id="@+id/txt_dao_output"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:textSize="16dp"
		    />
	    	    
	</ScrollView>
	
</LinearLayout>
